--- a/prep/pressures/sst/v2020/sst_pressure_layer.Rmd
+++ b/prep/pressures/sst/v2020/sst_pressure_layer.Rmd
@@ -1,32 +1,56 @@
 ---
-title: "sst"
-output: html_document
+title: 'OHI+ Palmyra 2020: Sea Surface Temperature Pressure Layer'
+author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
+output: 
+  html_document:
+    toc: true
+    toc_depth: 2 
+    toc_float: yes
+    number_sections: false
+    theme: cerulean
+    highlight: haddock
+    includes: 
+     in_header: '../../../src/templates/ohi_hdr.html' 
+  pdf_document:
+    toc: true
 ---
 
 # Summary
+
 For the sea surface temperature pressure we calculated the number of times Palmyra's weekly SST was greater than the climatological mean for that week (an anomaly: greater than mean + one standard deviation) and summed the number of weekly anomalies in a single year. The maximum value a cell could have is 52 which would mean that cell had anomalous SST temperatures for each week of the year.
 
 To account for annual variation, we look at Sea Surface Temperature anomalies in 5 year periods, so the maximum value possible per cell is 260 anomalous weeks. To rescale the values from 0 to 1 we set a reference point. Previously, the reference point for SST has just been the maximum difference in anomalous weeks between the most recent time period and a historical reference period (1985-1989).
 
 This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.
 
+***
+
 # Data 
 
 **Source**: The [Coral Reef Temperature Anomaly Database Version 6 (CoRTAD)](https://data.nodc.noaa.gov/cgi-bin/iso?id=gov.noaa.nodc:0175483)  
+
 **Downloaded**: July 23, 2020    
+
 **Description**:  Sea Surface Temperature Anomalies (Kelvin)  
+
 **Native data resolution**: 4km^2^    
+
 **Time range**: 1982 - 2017  
+
 **Format**:  NetCDF  
   
-Citation: Saha, Korak; Zhao, Xuepeng; Zhang, Huai-min; Casey, Kenneth S.; Zhang, Dexin; Zhang, Yongsheng; Baker-Yeboah, Sheekela; Relph, John M.; Krishnan, Ajay; Ryan, Thomas (2018). The Coral Reef Temperature Anomaly Database (CoRTAD) Version 6 - Global, 4 km Sea Surface Temperature and Related Thermal Stress Metrics for 1982 to 2017. NOAA National Centers for Environmental Information. Dataset. https://doi.org/10.25921/ffw7-cs39. Accessed: July 23, 2020.   
+**Citation**: Saha, Korak; Zhao, Xuepeng; Zhang, Huai-min; Casey, Kenneth S.; Zhang, Dexin; Zhang, Yongsheng; Baker-Yeboah, Sheekela; Relph, John M.; Krishnan, Ajay; Ryan, Thomas (2018). The Coral Reef Temperature Anomaly Database (CoRTAD) Version 6 - Global, 4 km Sea Surface Temperature and Related Thermal Stress Metrics for 1982 to 2017. NOAA National Centers for Environmental Information. Dataset. https://doi.org/10.25921/ffw7-cs39. Accessed: July 23, 2020.   
+
+***
 
 # Setup 
 
 ```{r setup, message = F, warning = F}
+
 knitr::opts_chunk$set(echo = FALSE)
 
 library(tidyverse)
+library(raster)
 library(doParallel)
 library(janitor)
 library(lubridate)
@@ -35,14 +59,17 @@ library(here)
 # Source and set file paths
 source(here('src/R/common.R'))
 
-dir_prs   <- '~/github/pal-prep/prep/pressures/sst/v2020'
+dir_prs <- '~/github/pal-prep/prep/pressures/sst/v2020'
+
 ```
+
+***
 
 # Methods
 
 ## Get Global Data
 
-We will use the global data that was processed for OHI Global 2020, which includes data from 2005 - 2017. This data is saved on a server at NCEAS.
+We will use the global data that was processed for OHI Global 2020, which includes data from 1982 - 2017. This data is saved on a server at NCEAS.
 
 ```{r get-global-sst-data, eval=F}
 
@@ -51,14 +78,16 @@ sst_global_files <- list.files(file.path(dir_M,'git-annex/globalprep/prs_sst/v20
 # Plot the most recent year of data:
 plot(raster(sst_global_files[36]),col=cols,main = "Sea Surface Temperature 2017",box=F,axes=F,
      legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+
 ```
+
 ## Crop to Palmyra
 
 Using the `crop` function from the `raster` package we crop all sst rasters to the Palmyra extent and then reproject them to the US Albers projection for consistency across the assessment. We crop the global rasters first to reduce the time it takes to reproject the rasters. `ocean_rast3_100` is used as a mask to remove land cells from the raster for better visuals.  
 
 ```{r crop-to-pal, eval=F}
-registerDoParallel(10) # Register 10 cores for parallel processing
 
+registerDoParallel(10) # Register 10 cores for parallel processing
 
 foreach(f = sst_global_files) %dopar% {
   #f = sst_global_files[36]
@@ -68,12 +97,12 @@ foreach(f = sst_global_files) %dopar% {
     crop(usalb_ext3) %>% # Crop to Palmyra extent
     mask(ocean_rast3_100, filename = paste0(file.path(dir_anx),'/dataprep/prs_sst/output/sst_annual_anoms/annual_anoms_',
                                             substr(basename(f), 25, 28),'.tif'), overwrite = T)
-  
 }
 
 ```
 
-Check the rasters to make sure it makes sense:   
+Check the rasters to make sure it makes sense:  
+
 ```{r check, eval=F, include=F}
 
 # Check a few rasters to make sure this makes sense:
@@ -87,7 +116,9 @@ plot(check82, col=cols,
 plot(check17, col=cols, 
      main = "Sea Surface Temperature 2017",
      legend.args=list(text='Anomalous Weeks', side=4, font=2, line=2.5, cex=0.8))
+
 ```
+
 ## Visualize change over time
 
 Visualize the change in sea surface temperature anomalies over time. 
@@ -112,8 +143,8 @@ saveGIF({
       
   }
 }, movie.name = 'sst_annual_anoms.gif')
-```
 
+```
 
 <img src="sst_annual_anoms.gif"/>
 
@@ -135,6 +166,7 @@ for(i in 1982:2013){
   
   writeRaster(s, filename = paste0(dir_anx, '/dataprep/prs_sst/output/sst_5yr_anom_sums/sum_anoms_', min(yrs), '-', max(yrs), '.tif'), overwrite=T)
 }
+
 ```
 
 ## Rescale
@@ -143,8 +175,8 @@ To account for annual variation, we look at Sea Surface Temperature anomalies in
 
 This time we have decided to use a reference point that represents a regime shift. Once a given cell is anomalous for more than 50% of a five-year period, it has shifted into a new regime. All cells that have a value greater than 130 weeks (51% of a 5 year time period) are assigned a 1. The rest of the cells are scaled to this reference point by dividing by 130.
 
-
 ```{r rescale, eval=F}
+
 sst_aggs <- list.files(file.path(dir_anx, '/dataprep/prs_sst/output/sst_5yr_anom_sums'), full.names=T) 
 
 # Define the rescale function
@@ -163,6 +195,7 @@ resc_func <- function(x){
 foreach(file = sst_aggs) %dopar%{
   resc_func(file)
 }
+
 ```
 
 ## Pressure Over Time
@@ -187,9 +220,12 @@ saveGIF({
       
   }
 }, movie.name = 'sst_rescale.gif')
+
 ```
 
 <img src="sst_rescale.gif"/>
+
+***
 
 # Results
 
@@ -216,20 +252,24 @@ sst_data <- pivot_longer(pal_stats,
 
 # Save to output folder
 write_csv(sst_data, file.path(dir_prs, "output/sst_pressure.csv"))
+
 ```
 
 ## Save to Toolbox
 
 ```{r save-to-toolbox, eval=F}
+
 sst_pressure <- read_csv(file.path(dir_prs, "output/sst_pressure.csv"))
+
 write_csv(sst_pressure, file.path(dir_scores, "layers/prs_cc_sst.csv"))
+
 ```
 
 ## Final Visualization
 
 ```{r sst-viz}
-sst_data <- read_csv(file.path(dir_prs, "output/sst_pressure.csv"))
 
+sst_data <- read_csv(file.path(dir_prs, "output/sst_pressure.csv"))
 
 ggplot(sst_data, aes(x = year, y = pressure_score)) +
   geom_line() + 
@@ -238,11 +278,13 @@ ggplot(sst_data, aes(x = year, y = pressure_score)) +
   scale_y_continuous(expand = c(0,0), limits = c(0.10,0.50)) + 
   labs(y = "Pressure Score", x = "Year") + 
   theme_minimal()
+
 ```
 
 This code chunk creates a google visualization of the scores through time. It unfortunately does not allow the google chart to show up in the RMarkdown knitted document.
 
 ```{r googlevis}
+
 library(googleVis)
 
 plotData <- sst_data %>%
@@ -253,6 +295,7 @@ Motion <- gvisMotionChart(plotData,
                        timevar="year")
 plot(Motion)
 print(Motion, file='sst.html')
+
 ```
 
 ############# Local Data ###########
