--- a/prep/cw/v2020/debris_data_prep.Rmd
+++ b/prep/cw/v2020/debris_data_prep.Rmd
@@ -104,20 +104,16 @@ ref_point <- 6
 
 # Calculate status
 fad_status <- annual_fad %>% 
-  mutate(value = (number_fads - ref_point) / ref_point,
+  mutate(region_id = 1,
+         value = (number_fads - ref_point) / ref_point,
          value = ifelse(value < 0, 0, value), # Adjust any below 0 values to zero 
          status = 1 - value,
-         status = ifelse(status == 0, 0.001, status)) # Change from 0 to prevent geometric mean from going to 0
-
-# Add a 2020 year and finalize data frame:
-fad_status20 <- fad_status %>% 
-  mutate(status = ifelse(year == 2020, fad_status$status[fad_status$year == 2019], status), # 2020 data is not complete so use 2019 data for 2020
-         region_id = 1) %>% 
-  filter(year >= 2014) %>% # Only use years 2014-2020
+         status = ifelse(status == 0, 0.001, status)) %>% # Change from 0 to prevent geometric mean from going to 0
+  filter(year >= 2014 & year < 2020) %>% # Remove 2020 as data is incomplete
   dplyr::select(region_id, year, status)
 
 # Save to output
-write_csv(fad_status20, file.path(dir_goal, "output/fad_status.csv"))
+write_csv(fad_status, file.path(dir_goal, "output/fad_status.csv"))
 ```
 
 ## Save to Toolbox
@@ -136,7 +132,15 @@ Debris will also be a pressure layer where higher scores indicate more marine de
 ```{r debris-pressure-layer, eval=F}
 fad_status <- read_csv(file.path(dir_goal, "output/fad_status.csv"))
 
+# Add year 2020 (repeat 2019)
+add_20 <- data.frame(
+  region_id = 1, 
+  year = 2020,
+  status = fad_status$status[fad_status$year == 2019])
+
+# Pressure scores
 pressure <- fad_status %>% 
+  rbind(add_20) %>% 
   mutate(pressure_score = 1 - status) %>% 
   dplyr::select(-status)
 
