--- a/src/templates/pal_hdr.Rmd
+++ b/src/templates/pal_hdr.Rmd
@@ -3,7 +3,7 @@ title: "OHI Global Header"
 output: html_fragment
 ---
 <p align = "center">
-[![ohi logo](ohi_banner.png)](http://ohi-science.org)
+[![ohi logo](pal_banner.png)](http://ohi-science.org)
 <br>
 [OHI Science](http://ohi-science.org) |
 [Citation policy](http://ohi-science.org/citation-policy/)
