--- a/prep/sp/ico/v2020/ico_data_prep.Rmd
+++ b/prep/sp/ico/v2020/ico_data_prep.Rmd
@@ -1,5 +1,6 @@
 ---
-title: 'OHI+ Palmyra 2020 - Iconic species subgoal'
+title: 'Iconic species Sub-goal'
+subtitle: 'OHI+ Palmyra 2020 Assessment'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
