--- a/prep/sp/lsp/v2020/lsp_data_prep.Rmd
+++ b/prep/sp/lsp/v2020/lsp_data_prep.Rmd
@@ -1,5 +1,6 @@
 ---
-title: 'OHI+ Palmyra 2020 - Lasting Special Places subgoal'
+title: 'Lasting Special Places Sub-goal'
+subtitle: 'OHI+ Palmyra 2020 Assessment'
 author: "*Compiled on `r date()` by `r Sys.info()['user']`*"
 output: 
   html_document:
